tmp/migrate_error.log
node : c:\Users\jhefe\.
gemini\antigravity\play
ground\outer-bohr-saas\
tmp\migrate_editor.js:6
44
No linha:1 caractere:1
+ node c:\Users\jhefe\.
gemini\antigravity\play
ground\outer-bohr-saas\
tm ...
+ ~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~
~~
    + CategoryInfo     
         : NotSpecifi  
  ed: (c:\Users\jhef   
 e\...e_editor.js:6    
44:String) [], Rem    
oteException
    + FullyQualifiedEr 
   rorId : NativeComm  
  andError
 
    const 
simplifiedProfile = 
\`function 
ProfileView() {
                       
       ^

SyntaxError: Invalid 
or unexpected token
    at wrapSafe (node:i
nternal/modules/cjs/loa
der:1743:18)
    at Module._compile 
(node:internal/modules/
cjs/loader:1786:20)
    at Object..js (node
:internal/modules/cjs/l
oader:1943:10)
    at Module.load (nod
e:internal/modules/cjs/
loader:1533:32)
    at Module._load (no
de:internal/modules/cjs
/loader:1335:12)
    at wrapModuleLoad (
node:internal/modules/c
js/loader:255:19)
    at Module.executeUs
erEntryPoint [as 
runMain] (node:internal
/modules/run_main:154:5
)
    at node:internal/ma
in/run_main_module:33:4
7

Node.js v24.14.0
